// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardActions demo examples Snapshots: basic 1`] = `
.emotion-38::after {
  clear: both;
  content: "";
  display: table;
}

.emotion-38 > * {
  margin-bottom: 1em;
}

@media (min-width:40em) {
  .emotion-38 > * {
    float: left;
    margin-right: 1em;
    width: 47%;
  }
}

@media (min-width:64em) {
  .emotion-38 > *:nth-last-child(n+3),
  .emotion-38 > *:nth-last-child(n+3) ~ * {
    width: 30%;
  }
}

.emotion-12 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: #ffffff;
  border: 1px solid #ebeff5;
  border-radius: 0.1875em;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2),0 4px 8px 0 rgba(0,0,0,0.2);
  padding-bottom: 0.01em;
  padding-top: 0.01em;
}

.emotion-12 *,
.emotion-12 *::before,
.emotion-12 *::after {
  box-sizing: inherit;
}

.emotion-12:focus {
  box-shadow: 0 0 0 2px #1d5bbf,0 1px 2px 0 rgba(0,0,0,0.2),0 2px 4px 0 rgba(0,0,0,0.2);
}

.emotion-1 {
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1em;
  padding-right: 1em;
}

.emotion-1:last-child {
  margin-bottom: 1.5em;
}

.emotion-0 {
  font-size: 0.875em;
  line-height: 1.5;
}

.emotion-11 {
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1em;
  padding-right: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-bottom: 0.5em;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 0.875em;
  margin-bottom: 0.5714285714285714em;
  margin-left: 0.5714285714285714em;
}

.emotion-4 {
  box-sizing: border-box;
  color: #3272d9;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: #ffffff;
  border-color: #c8d1e0;
  border-radius: 0.1875em;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: inline-block;
  font-weight: 600;
  height: 2em;
  margin: 0;
  min-width: 2em;
  padding: 0 0.5em;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
}

.emotion-4 *,
.emotion-4 *::before,
.emotion-4 *::after {
  box-sizing: inherit;
}

.emotion-4:focus {
  background-color: #ffffff;
  box-shadow: 0 0 0 1px #ffffff,0 0 0 2px #1d5bbf;
  color: #3272d9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4:hover {
  background-color: #f5f7fa;
  border-color: #5691f0;
  color: #3272d9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4:focus:active,
.emotion-4:focus:hover {
  border-color: #c8d1e0;
}

.emotion-4:active {
  background-color: #ebeff5;
  border-color: #1d5bbf;
  color: #3272d9;
}

.emotion-4::-moz-focus-inner {
  border: 0;
}

.emotion-4 [role="img"] {
  box-sizing: content-box;
  color: #3272d9;
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-4 [role="img"]:first-child {
  margin-right: 0.5em;
}

.emotion-4 [role="img"]:last-child {
  margin-left: 0.5em;
}

.emotion-4 [role="img"]:only-child {
  margin: 0;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-height: 100%;
  pointer-events: none;
  width: 100%;
}

.emotion-2 {
  display: block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
  font-size: 0.875em;
  line-height: 2.2857142857142856em;
}

.emotion-6 {
  fill: currentcolor;
  font-size: 16px;
  height: 1em;
  width: 1em;
}

.emotion-17 {
  box-sizing: border-box;
  color: #3272d9;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  border-color: transparent;
  border-radius: 0.1875em;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: inline-block;
  font-weight: 600;
  height: 2em;
  margin: 0;
  min-width: 2em;
  padding: 0 0.5em;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
}

.emotion-17 *,
.emotion-17 *::before,
.emotion-17 *::after {
  box-sizing: inherit;
}

.emotion-17:focus {
  border-color: #1d5bbf;
  color: #3272d9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17:hover {
  background-color: #f5f7fa;
  color: #3272d9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17:focus:active,
.emotion-17:focus:hover {
  border-color: #1d5bbf;
}

.emotion-17:active {
  background-color: #ebeff5;
  color: #3272d9;
}

.emotion-17::-moz-focus-inner {
  border: 0;
}

.emotion-17 [role="img"] {
  box-sizing: content-box;
  color: #3272d9;
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-17 [role="img"]:first-child {
  margin-right: 0.5em;
}

.emotion-17 [role="img"]:last-child {
  margin-left: 0.5em;
}

.emotion-17 [role="img"]:only-child {
  margin: 0;
}

.emotion-22 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: #3272d9;
  border-color: transparent;
  border-radius: 0.1875em;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: inline-block;
  font-weight: 600;
  height: 2em;
  margin: 0;
  min-width: 2em;
  padding: 0 0.5em;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
}

.emotion-22 *,
.emotion-22 *::before,
.emotion-22 *::after {
  box-sizing: inherit;
}

.emotion-22:focus {
  background-color: #3272d9;
  box-shadow: 0 0 0 1px #ffffff,0 0 0 2px #1d5bbf;
  color: #ffffff;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-22:hover {
  background-color: #5691f0;
  color: #ffffff;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-22:focus:active,
.emotion-22:focus:hover {
  border-color: transparent;
}

.emotion-22:active {
  background-color: #1d5bbf;
  border-color: #1d5bbf;
  color: #ffffff;
}

.emotion-22::-moz-focus-inner {
  border: 0;
}

.emotion-22 [role="img"] {
  box-sizing: content-box;
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-22 [role="img"]:first-child {
  margin-right: 0.5em;
}

.emotion-22 [role="img"]:last-child {
  margin-left: 0.5em;
}

.emotion-22 [role="img"]:only-child {
  margin: 0;
}

.emotion-30 {
  box-sizing: border-box;
  color: #3272d9;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  border-color: transparent;
  border-radius: 0.1875em;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: inline-block;
  font-weight: 600;
  height: 2em;
  margin: 0;
  min-width: 2em;
  padding: 0.4375em;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
}

.emotion-30 *,
.emotion-30 *::before,
.emotion-30 *::after {
  box-sizing: inherit;
}

.emotion-30:focus {
  border-color: #1d5bbf;
  color: #3272d9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-30:hover {
  background-color: #f5f7fa;
  color: #3272d9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-30:focus:active,
.emotion-30:focus:hover {
  border-color: #1d5bbf;
}

.emotion-30:active {
  background-color: #ebeff5;
  color: #3272d9;
}

.emotion-30::-moz-focus-inner {
  border: 0;
}

.emotion-30 [role="img"] {
  box-sizing: content-box;
  color: #3272d9;
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-30 [role="img"]:first-child {
  margin-right: 0.5em;
}

.emotion-30 [role="img"]:last-child {
  margin-left: 0.5em;
}

.emotion-30 [role="img"]:only-child {
  margin: 0;
}

<DemoLayout>
  <Styled(div)>
    <div
      className="emotion-38"
    >
      <Card>
        <Styled(div)>
          <div
            className="emotion-12"
          >
            <CardBlock>
              <Styled(div)>
                <div
                  className="emotion-1"
                >
                  <Styled(div)>
                    <div
                      className="emotion-0"
                    >
                      
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis
  pretium massa. Aliquam erat volutpat. Nulla facilisi.

                    </div>
                  </Styled(div)>
                </div>
              </Styled(div)>
            </CardBlock>
            <CardActions>
              <Styled(div)>
                <div
                  className="emotion-11"
                >
                  <Styled(span)
                    key="0/.0"
                  >
                    <span
                      className="emotion-5"
                    >
                      <WithForwardRef(Button)
                        size="medium"
                      >
                        <Button
                          forwardedRef={null}
                          size="medium"
                        >
                          <Styled(button)
                            size="medium"
                            text="Button 1"
                          >
                            <button
                              className="emotion-4"
                            >
                              <Styled(span)>
                                <span
                                  className="emotion-3"
                                >
                                  <Styled(span)
                                    size="medium"
                                  >
                                    <span
                                      className="emotion-2"
                                    >
                                      Button 1
                                    </span>
                                  </Styled(span)>
                                </span>
                              </Styled(span)>
                            </button>
                          </Styled(button)>
                        </Button>
                      </WithForwardRef(Button)>
                    </span>
                  </Styled(span)>
                  <Styled(span)
                    key="1/.1"
                  >
                    <span
                      className="emotion-5"
                    >
                      <WithForwardRef(Button)
                        iconStart={<IconCloud />}
                        size="medium"
                      >
                        <Button
                          forwardedRef={null}
                          iconStart={<IconCloud />}
                          size="medium"
                        >
                          <Styled(button)
                            size="medium"
                            text="Button 2"
                          >
                            <button
                              className="emotion-4"
                            >
                              <Styled(span)>
                                <span
                                  className="emotion-3"
                                >
                                  <IconCloud
                                    key="iconStart"
                                    size="medium"
                                  >
                                    <Icon
                                      rtl={false}
                                      size="medium"
                                    >
                                      <Styled(svg)
                                        aria-hidden={true}
                                        focusable="false"
                                        role="img"
                                        rtl={false}
                                        size="medium"
                                        viewBox="0 0 24 24"
                                      >
                                        <svg
                                          aria-hidden={true}
                                          className="emotion-6"
                                          focusable="false"
                                          role="img"
                                          viewBox="0 0 24 24"
                                        >
                                          <g>
                                            <path
                                              d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                                            />
                                          </g>
                                        </svg>
                                      </Styled(svg)>
                                    </Icon>
                                  </IconCloud>
                                  <Styled(span)
                                    size="medium"
                                  >
                                    <span
                                      className="emotion-2"
                                    >
                                      Button 2
                                    </span>
                                  </Styled(span)>
                                </span>
                              </Styled(span)>
                            </button>
                          </Styled(button)>
                        </Button>
                      </WithForwardRef(Button)>
                    </span>
                  </Styled(span)>
                </div>
              </Styled(div)>
            </CardActions>
          </div>
        </Styled(div)>
      </Card>
      <Card>
        <Styled(div)>
          <div
            className="emotion-12"
          >
            <CardBlock>
              <Styled(div)>
                <div
                  className="emotion-1"
                >
                  <Styled(div)>
                    <div
                      className="emotion-0"
                    >
                      
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis
  pretium massa. Aliquam erat volutpat. Nulla facilisi.

                    </div>
                  </Styled(div)>
                </div>
              </Styled(div)>
            </CardBlock>
            <CardActions>
              <Styled(div)>
                <div
                  className="emotion-11"
                >
                  <Styled(span)
                    key="0/.0"
                  >
                    <span
                      className="emotion-5"
                    >
                      <WithForwardRef(Button)
                        minimal={true}
                        size="medium"
                      >
                        <Button
                          forwardedRef={null}
                          minimal={true}
                          size="medium"
                        >
                          <Styled(button)
                            minimal={true}
                            size="medium"
                            text="Button 1"
                          >
                            <button
                              className="emotion-17"
                            >
                              <Styled(span)>
                                <span
                                  className="emotion-3"
                                >
                                  <Styled(span)
                                    size="medium"
                                  >
                                    <span
                                      className="emotion-2"
                                    >
                                      Button 1
                                    </span>
                                  </Styled(span)>
                                </span>
                              </Styled(span)>
                            </button>
                          </Styled(button)>
                        </Button>
                      </WithForwardRef(Button)>
                    </span>
                  </Styled(span)>
                  <Styled(span)
                    key="1/.1"
                  >
                    <span
                      className="emotion-5"
                    >
                      <WithForwardRef(Button)
                        iconStart={<IconCloud />}
                        primary={true}
                        size="medium"
                      >
                        <Button
                          forwardedRef={null}
                          iconStart={<IconCloud />}
                          primary={true}
                          size="medium"
                        >
                          <Styled(button)
                            primary={true}
                            size="medium"
                            text="Button 2"
                          >
                            <button
                              className="emotion-22"
                            >
                              <Styled(span)>
                                <span
                                  className="emotion-3"
                                >
                                  <IconCloud
                                    key="iconStart"
                                    size="medium"
                                  >
                                    <Icon
                                      rtl={false}
                                      size="medium"
                                    >
                                      <Styled(svg)
                                        aria-hidden={true}
                                        focusable="false"
                                        role="img"
                                        rtl={false}
                                        size="medium"
                                        viewBox="0 0 24 24"
                                      >
                                        <svg
                                          aria-hidden={true}
                                          className="emotion-6"
                                          focusable="false"
                                          role="img"
                                          viewBox="0 0 24 24"
                                        >
                                          <g>
                                            <path
                                              d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                                            />
                                          </g>
                                        </svg>
                                      </Styled(svg)>
                                    </Icon>
                                  </IconCloud>
                                  <Styled(span)
                                    size="medium"
                                  >
                                    <span
                                      className="emotion-2"
                                    >
                                      Button 2
                                    </span>
                                  </Styled(span)>
                                </span>
                              </Styled(span)>
                            </button>
                          </Styled(button)>
                        </Button>
                      </WithForwardRef(Button)>
                    </span>
                  </Styled(span)>
                </div>
              </Styled(div)>
            </CardActions>
          </div>
        </Styled(div)>
      </Card>
      <Card>
        <Styled(div)>
          <div
            className="emotion-12"
          >
            <CardBlock>
              <Styled(div)>
                <div
                  className="emotion-1"
                >
                  <Styled(div)>
                    <div
                      className="emotion-0"
                    >
                      
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis
  pretium massa. Aliquam erat volutpat. Nulla facilisi.

                    </div>
                  </Styled(div)>
                </div>
              </Styled(div)>
            </CardBlock>
            <CardActions>
              <Styled(div)>
                <div
                  className="emotion-11"
                >
                  <Styled(span)
                    key="0/.0"
                  >
                    <span
                      className="emotion-5"
                    >
                      <WithForwardRef(Button)
                        iconStart={
                          <IconCloud
                            title="Button label 1"
                          />
                        }
                        minimal={true}
                        size="medium"
                      >
                        <Button
                          forwardedRef={null}
                          iconStart={
                            <IconCloud
                              title="Button label 1"
                            />
                          }
                          minimal={true}
                          size="medium"
                        >
                          <Styled(button)
                            minimal={true}
                            size="medium"
                          >
                            <button
                              className="emotion-30"
                            >
                              <Styled(span)>
                                <span
                                  className="emotion-3"
                                >
                                  <IconCloud
                                    key="iconStart"
                                    size="medium"
                                    title="Button label 1"
                                  >
                                    <Icon
                                      rtl={false}
                                      size="medium"
                                      title="Button label 1"
                                    >
                                      <Styled(svg)
                                        aria-hidden={null}
                                        aria-labelledby="icon-title-icon-3"
                                        focusable="false"
                                        role="img"
                                        rtl={false}
                                        size="medium"
                                        viewBox="0 0 24 24"
                                      >
                                        <svg
                                          aria-hidden={null}
                                          aria-labelledby="icon-title-icon-3"
                                          className="emotion-6"
                                          focusable="false"
                                          role="img"
                                          viewBox="0 0 24 24"
                                        >
                                          <title
                                            id="icon-title-icon-3"
                                          >
                                            Button label 1
                                          </title>
                                          <g>
                                            <path
                                              d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                                            />
                                          </g>
                                        </svg>
                                      </Styled(svg)>
                                    </Icon>
                                  </IconCloud>
                                </span>
                              </Styled(span)>
                            </button>
                          </Styled(button)>
                        </Button>
                      </WithForwardRef(Button)>
                    </span>
                  </Styled(span)>
                  <Styled(span)
                    key="1/.1"
                  >
                    <span
                      className="emotion-5"
                    >
                      <WithForwardRef(Button)
                        iconStart={
                          <IconCloud
                            title="Button label 2"
                          />
                        }
                        minimal={true}
                        size="medium"
                      >
                        <Button
                          forwardedRef={null}
                          iconStart={
                            <IconCloud
                              title="Button label 2"
                            />
                          }
                          minimal={true}
                          size="medium"
                        >
                          <Styled(button)
                            minimal={true}
                            size="medium"
                          >
                            <button
                              className="emotion-30"
                            >
                              <Styled(span)>
                                <span
                                  className="emotion-3"
                                >
                                  <IconCloud
                                    key="iconStart"
                                    size="medium"
                                    title="Button label 2"
                                  >
                                    <Icon
                                      rtl={false}
                                      size="medium"
                                      title="Button label 2"
                                    >
                                      <Styled(svg)
                                        aria-hidden={null}
                                        aria-labelledby="icon-title-icon-4"
                                        focusable="false"
                                        role="img"
                                        rtl={false}
                                        size="medium"
                                        viewBox="0 0 24 24"
                                      >
                                        <svg
                                          aria-hidden={null}
                                          aria-labelledby="icon-title-icon-4"
                                          className="emotion-6"
                                          focusable="false"
                                          role="img"
                                          viewBox="0 0 24 24"
                                        >
                                          <title
                                            id="icon-title-icon-4"
                                          >
                                            Button label 2
                                          </title>
                                          <g>
                                            <path
                                              d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                                            />
                                          </g>
                                        </svg>
                                      </Styled(svg)>
                                    </Icon>
                                  </IconCloud>
                                </span>
                              </Styled(span)>
                            </button>
                          </Styled(button)>
                        </Button>
                      </WithForwardRef(Button)>
                    </span>
                  </Styled(span)>
                </div>
              </Styled(div)>
            </CardActions>
          </div>
        </Styled(div)>
      </Card>
    </div>
  </Styled(div)>
</DemoLayout>
`;

exports[`CardActions demo examples Snapshots: rtl 1`] = `
.emotion-13::after {
  clear: both;
  content: "";
  display: table;
}

.emotion-13 > * {
  margin-bottom: 1em;
}

@media (min-width:40em) {
  .emotion-13 > * {
    float: left;
    margin-right: 1em;
    width: 47%;
  }
}

@media (min-width:64em) {
  .emotion-13 > *:nth-last-child(n+3),
  .emotion-13 > *:nth-last-child(n+3) ~ * {
    width: 30%;
  }
}

.emotion-12 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: #ffffff;
  border: 1px solid #ebeff5;
  border-radius: 0.1875em;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2),0 4px 8px 0 rgba(0,0,0,0.2);
  padding-bottom: 0.01em;
  padding-top: 0.01em;
}

.emotion-12 *,
.emotion-12 *::before,
.emotion-12 *::after {
  box-sizing: inherit;
}

.emotion-12:focus {
  box-shadow: 0 0 0 2px #1d5bbf,0 1px 2px 0 rgba(0,0,0,0.2),0 2px 4px 0 rgba(0,0,0,0.2);
}

.emotion-1 {
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1em;
  padding-right: 1em;
}

.emotion-1:last-child {
  margin-bottom: 1.5em;
}

.emotion-0 {
  font-size: 0.875em;
  line-height: 1.5;
}

.emotion-11 {
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1em;
  padding-right: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-bottom: 0.5em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-height: 100%;
  pointer-events: none;
  width: 100%;
}

.emotion-2 {
  display: block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
  font-size: 0.875em;
  line-height: 2.2857142857142856em;
}

.emotion-6 {
  fill: currentcolor;
  font-size: 16px;
  height: 1em;
  width: 1em;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 0.875em;
  margin-bottom: 0.5714285714285714em;
  margin-right: 0.5714285714285714em;
}

.emotion-4 {
  box-sizing: border-box;
  color: #3272d9;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: #ffffff;
  border-color: #c8d1e0;
  border-radius: 0.1875em;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: inline-block;
  font-weight: 600;
  height: 2em;
  margin: 0;
  min-width: 2em;
  padding: 0 0.5em;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
}

.emotion-4 *,
.emotion-4 *::before,
.emotion-4 *::after {
  box-sizing: inherit;
}

.emotion-4:focus {
  background-color: #ffffff;
  box-shadow: 0 0 0 1px #ffffff,0 0 0 2px #1d5bbf;
  color: #3272d9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4:hover {
  background-color: #f5f7fa;
  border-color: #5691f0;
  color: #3272d9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4:focus:active,
.emotion-4:focus:hover {
  border-color: #c8d1e0;
}

.emotion-4:active {
  background-color: #ebeff5;
  border-color: #1d5bbf;
  color: #3272d9;
}

.emotion-4::-moz-focus-inner {
  border: 0;
}

.emotion-4 [role="img"] {
  box-sizing: content-box;
  color: #3272d9;
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-4 [role="img"]:first-child {
  margin-left: 0.5em;
}

.emotion-4 [role="img"]:last-child {
  margin-right: 0.5em;
}

.emotion-4 [role="img"]:only-child {
  margin: 0;
}

<DemoLayout
  dir="rtl"
>
  <Styled(div)
    dir="rtl"
  >
    <div
      className="emotion-13"
      dir="rtl"
    >
      <ThemeProvider>
        <ThemeProvider>
          <Card>
            <Styled(div)>
              <div
                className="emotion-12"
              >
                <CardBlock>
                  <Styled(div)>
                    <div
                      className="emotion-1"
                    >
                      <Styled(div)>
                        <div
                          className="emotion-0"
                        >
                          
  خدمة الجزر أبجد هوز. حتى على مستوى أسعار العقارات. الغلوتين. لا عقوبة. حتى الرعاية. ولكن الآن تنورة المؤلف والتغذية.

                        </div>
                      </Styled(div)>
                    </div>
                  </Styled(div)>
                </CardBlock>
                <CardActions>
                  <Styled(div)>
                    <div
                      className="emotion-11"
                    >
                      <Styled(span)
                        key="0/.0"
                      >
                        <span
                          className="emotion-5"
                        >
                          <WithForwardRef(Button)
                            size="medium"
                          >
                            <Button
                              forwardedRef={null}
                              size="medium"
                            >
                              <Styled(button)
                                size="medium"
                                text="زر واحد"
                              >
                                <button
                                  className="emotion-4"
                                >
                                  <Styled(span)>
                                    <span
                                      className="emotion-3"
                                    >
                                      <Styled(span)
                                        size="medium"
                                      >
                                        <span
                                          className="emotion-2"
                                        >
                                          زر واحد
                                        </span>
                                      </Styled(span)>
                                    </span>
                                  </Styled(span)>
                                </button>
                              </Styled(button)>
                            </Button>
                          </WithForwardRef(Button)>
                        </span>
                      </Styled(span)>
                      <Styled(span)
                        key="1/.1"
                      >
                        <span
                          className="emotion-5"
                        >
                          <WithForwardRef(Button)
                            iconStart={<IconCloud />}
                            size="medium"
                          >
                            <Button
                              forwardedRef={null}
                              iconStart={<IconCloud />}
                              size="medium"
                            >
                              <Styled(button)
                                size="medium"
                                text="زر اثنين"
                              >
                                <button
                                  className="emotion-4"
                                >
                                  <Styled(span)>
                                    <span
                                      className="emotion-3"
                                    >
                                      <IconCloud
                                        key="iconStart"
                                        size="medium"
                                      >
                                        <Icon
                                          rtl={false}
                                          size="medium"
                                        >
                                          <Styled(svg)
                                            aria-hidden={true}
                                            focusable="false"
                                            role="img"
                                            rtl={false}
                                            size="medium"
                                            viewBox="0 0 24 24"
                                          >
                                            <svg
                                              aria-hidden={true}
                                              className="emotion-6"
                                              focusable="false"
                                              role="img"
                                              viewBox="0 0 24 24"
                                            >
                                              <g>
                                                <path
                                                  d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                                                />
                                              </g>
                                            </svg>
                                          </Styled(svg)>
                                        </Icon>
                                      </IconCloud>
                                      <Styled(span)
                                        size="medium"
                                      >
                                        <span
                                          className="emotion-2"
                                        >
                                          زر اثنين
                                        </span>
                                      </Styled(span)>
                                    </span>
                                  </Styled(span)>
                                </button>
                              </Styled(button)>
                            </Button>
                          </WithForwardRef(Button)>
                        </span>
                      </Styled(span)>
                    </div>
                  </Styled(div)>
                </CardActions>
              </div>
            </Styled(div)>
          </Card>
        </ThemeProvider>
      </ThemeProvider>
    </div>
  </Styled(div)>
</DemoLayout>
`;

exports[`CardActions demo examples Snapshots: with-links 1`] = `
.emotion-8::after {
  clear: both;
  content: "";
  display: table;
}

.emotion-8 > * {
  margin-bottom: 1em;
}

@media (min-width:40em) {
  .emotion-8 > * {
    float: left;
    margin-right: 1em;
    width: 47%;
  }
}

@media (min-width:64em) {
  .emotion-8 > *:nth-last-child(n+3),
  .emotion-8 > *:nth-last-child(n+3) ~ * {
    width: 30%;
  }
}

.emotion-7 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: #ffffff;
  border: 1px solid #ebeff5;
  border-radius: 0.1875em;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2),0 4px 8px 0 rgba(0,0,0,0.2);
  padding-bottom: 0.01em;
  padding-top: 0.01em;
}

.emotion-7 *,
.emotion-7 *::before,
.emotion-7 *::after {
  box-sizing: inherit;
}

.emotion-7:focus {
  box-shadow: 0 0 0 2px #1d5bbf,0 1px 2px 0 rgba(0,0,0,0.2),0 2px 4px 0 rgba(0,0,0,0.2);
}

.emotion-1 {
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1em;
  padding-right: 1em;
}

.emotion-1:last-child {
  margin-bottom: 1.5em;
}

.emotion-0 {
  font-size: 0.875em;
  line-height: 1.5;
}

.emotion-6 {
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1em;
  padding-right: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-bottom: 0.5em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 0.875em;
  margin-bottom: 0.5714285714285714em;
  margin-left: 0.5714285714285714em;
}

.emotion-2 {
  color: #3272d9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2:hover {
  color: #5691f0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2:focus {
  color: #3272d9;
  outline: 1px solid #1d5bbf;
  outline-offset: 2px;
}

.emotion-2:active {
  color: #1d5bbf;
}

<DemoLayout>
  <Styled(div)>
    <div
      className="emotion-8"
    >
      <Card>
        <Styled(div)>
          <div
            className="emotion-7"
          >
            <CardBlock>
              <Styled(div)>
                <div
                  className="emotion-1"
                >
                  <Styled(div)>
                    <div
                      className="emotion-0"
                    >
                      
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis
  pretium massa. Aliquam erat volutpat. Nulla facilisi.

                    </div>
                  </Styled(div)>
                </div>
              </Styled(div)>
            </CardBlock>
            <CardActions>
              <Styled(div)>
                <div
                  className="emotion-6"
                >
                  <Styled(span)
                    key="0/.0"
                  >
                    <span
                      className="emotion-3"
                    >
                      <Link
                        href="https://example.com"
                      >
                        <Link
                          href="https://example.com"
                          target="_blank"
                        >
                          <Styled(a)
                            href="https://example.com"
                            target="_blank"
                          >
                            <a
                              className="emotion-2"
                              href="https://example.com"
                              target="_blank"
                            >
                              Link 1
                            </a>
                          </Styled(a)>
                        </Link>
                      </Link>
                    </span>
                  </Styled(span)>
                  <Styled(span)
                    key="1/.1"
                  >
                    <span
                      className="emotion-3"
                    >
                      <Link
                        href="https://example.com"
                      >
                        <Link
                          href="https://example.com"
                          target="_blank"
                        >
                          <Styled(a)
                            href="https://example.com"
                            target="_blank"
                          >
                            <a
                              className="emotion-2"
                              href="https://example.com"
                              target="_blank"
                            >
                              Link 2
                            </a>
                          </Styled(a)>
                        </Link>
                      </Link>
                    </span>
                  </Styled(span)>
                </div>
              </Styled(div)>
            </CardActions>
          </div>
        </Styled(div)>
      </Card>
    </div>
  </Styled(div)>
</DemoLayout>
`;
